--- a/styles/abstracts/_color.scss
+++ b/styles/abstracts/_color.scss
@@ -2,3 +2,6 @@ $primary: #1f76bd;
 $secondary: #115c9b;
 $text: #444444;
 $textLight: #f0f0f0;
+$white: white;
+$black: black;
+$shadow: rgba(34, 31, 31, 0.8);
