--- a/styles/abstracts/_measurment.scss
+++ b/styles/abstracts/_measurment.scss
@@ -5,4 +5,6 @@ $md: 1em;
 $lg: 1.2em;
 $xl: 1.5em;
 $xxl: 1.8em;
-$top-bar: 4em;
+$main_navigation: 4em;
+$main_contact: 3em;
+$section_padding: 4em;
