--- a/styles/_theme.scss
+++ b/styles/_theme.scss
@@ -1,3 +1,5 @@
+@use "abstracts/abstracts.scss" as *;
+
 * {
   box-sizing: border-box;
 }
@@ -5,11 +7,10 @@
 html {
   font-size: 15px;
 }
+
 body {
   font-size: 15px;
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
-    "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
-    "Segoe UI Symbol";
+  font-family: $font;
 }
