--- a/styles/abstracts/_variables.scss
+++ b/styles/abstracts/_variables.scss
@@ -1,2 +1,5 @@
 $breakpoints: desktop tablet phone miniPhone;
 $sides: left, right, top, bottom;
+$font: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Helvetica Neue",
+  Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+$edge: 0px;
