--- a/styles/abstracts/mixins/_layout.scss
+++ b/styles/abstracts/mixins/_layout.scss
@@ -1,6 +1,8 @@
 @use "../variables" as *;
 @use "../measurment" as meas;
 
+$flex-position: start, end;
+
 @mixin margin($meas: meas.$md, $side: all) {
   @if length($meas) >1 {
     margin: $meas;
@@ -41,12 +43,20 @@
   }
 }
 
-@mixin flex($align-items, $justify-content: $align-items, $flex-direction: "") {
+@mixin flex($align, $justify: $align, $direction: "") {
+  $align-item: $align;
+  $justify-content: $justify;
+  @if index($flex-position, $align) {
+    $align-item: flex-#{$align};
+  }
+  @if index($flex-position, $justify) {
+    $justify-content: flex-#{$justify};
+  }
   display: flex;
-  align-items: $align-items;
+  align-items: $align-item;
   justify-content: $justify-content;
-  @if $flex-direction != "row" {
-    flex-direction: unquote($flex-direction);
+  @if $direction != "row" {
+    flex-direction: unquote($direction);
   }
 }
 
