--- a/styles/formatter/_reset.scss
+++ b/styles/formatter/_reset.scss
@@ -10,3 +10,19 @@ ul {
   padding: 0;
   list-style: none;
 }
+
+button {
+  border: none;
+  cursor: pointer;
+  font-family: $font;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
