--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,4 +1,5 @@
-@use "./theme" as *;
+@use "theme" as *;
 
-@use "./components/components";
-@use "./formatter/formatter";
+@use "components/components";
+@use "formatter/formatter";
+@use "uni_comp/uni_comp";
